--- a/view/posts/post1.html
+++ b/view/posts/post1.html
@@ -42,9 +42,10 @@
 <body>
 
     <nav id="nav"></nav>
+
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/classroom.jpg')">
+    <header class="intro-header" style="background-image: url('../../img/classroom.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
