--- a/view/posts/post2.html
+++ b/view/posts/post2.html
@@ -33,7 +33,7 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(function () {
-            $("#nav").load("../navbar.html");
+            $("#nav").load("../navbarPosts.html");
             $("#footer").load("../footer.html");
         });
     </script>
