--- a/view/about.html
+++ b/view/about.html
@@ -22,7 +22,8 @@
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+        rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,35 +64,38 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p> Brasileira, Solteira, 25 anos <br>
-                    Av. Carlos Orlando Carvalho, 685 Apt. 201 <br>
-                    Jardim da Penha – Vitória – Espírito Santo <br>
-                    Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
+                <p> Brasileira, Solteira, 25 anos <br> Av. Carlos Orlando Carvalho, 685 Apt. 201 <br> Jardim da Penha – Vitória
+                    – Espírito Santo <br> Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
 
                 <h3>FORMAÇÃO</h3>
                 <ul>Curso técnico em Geomática pelo Instituto Federal do Espírito Santo (Concluído em Julho de 2010);</ul>
-                <ul>Curso superior em Bacharelado em Sistemas de Informação pelo Instituto Federal do Espírito Santo (Em andamento desde 2011/1).</ul>
+                <ul>Curso superior em Bacharelado em Sistemas de Informação pelo Instituto Federal do Espírito Santo (Em andamento
+                    desde 2011/1).</ul>
 
                 <h3>EXPERIÊNCIA PROFISSIONAL</h3>
                 <h4>1 ano – Polícia Militar do Espírito Santo (2006)</h4>
-                <p> Cargo: Estagiária <br>
-                    Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos, Digitar Documentos, entre outras.</p>
+                <p> Cargo: Estagiária <br> Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos,
+                    Digitar Documentos, entre outras.</p>
                 <h4>3 meses – Secretaria Municipal de Saúde da Prefeitura Municipal de Vitória (2010)</h4>
-                <p> Cargo: Estagiária Técnica <br>
-                    Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de 2010.</p>
+                <p> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
+                    ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de
+                    2010.</p>
                 <h4>7 meses – Sistema Integrado de Bases Geoespaciais do Estado do Espírito Santo (GEOBASES) (2010)</h4>
-                <p> Cargo: Estagiária Técnica <br>
-                    Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras.</p>
+                <p> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
+                    ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos
+                    de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras.</p>
                 <h4>6 meses – Laboratório de Extensão em Desenvolvimento de Software (LEDS) (2015-2016)</h4>
-                <p> Cargo: Estagiária <br>
-                    Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition), Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras.</p>
+                <p> Cargo: Estagiária <br> Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition),
+                    Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras.</p>
                 <h4>8 meses – Conexos (2016)</h4>
-                <p> Cargo: Estagiária <br>
-                    Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
+                <p> Cargo: Estagiária <br> Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção
+                    de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
 
                 <h3>EXPERIÊNCIA INTERNACIONAL</h3>
                 <h4>18 meses – Intercâmbio pelo Ciência Sem Fronteiras (Jan 2014/Jun 2015)</h4>
-                <p>Atrávez  do  programa  Ciência  Sem  Fronteiras,  morei  na  cidade  de  Waterford  na  Irlanda  por  18 meses. Neste período cursei 8 meses de curso de inglês seguidos de 10 meses no curso de BSc. Multimedia Applications Development no Waterford Institute of Technology.</p>
+                <p>Atrávez do programa Ciência Sem Fronteiras, morei na cidade de Waterford na Irlanda por 18 meses. Neste período
+                    cursei 8 meses de curso de inglês seguidos de 10 meses no curso de BSc. Multimedia Applications Development
+                    no Waterford Institute of Technology.</p>
 
                 <h3>EXPERIÊNCIA PRÁTICA</h3>
                 <ul>
@@ -114,7 +118,10 @@
                 </ul>
 
                 <h3>TRABALHOS COMPLETOS PUBLICADOS EM ANAIS DE CONGRESSO</h3>
-                <p> SILVA, M. L. G. ; MANTOVANELLI, E. C. ; ANDRADE, J. O. ; KOMATI, K. S. . Uma Aplicação baseada em SIG para Análise de Infrações Cometidas por Menores Infratores: Estudo de caso no Município de Vitória no estado do Espírito Santo. In: X Escola Regional de Banco de Dados (ERBD 2014), 2014, São Francisco do Sul/ SC. Anais do X Escola Regional de Banco de Dados (ERBD 2014), 2014.</p>
+                <p> SILVA, M. L. G. ; MANTOVANELLI, E. C. ; ANDRADE, J. O. ; KOMATI, K. S. . Uma Aplicação baseada em SIG para
+                    Análise de Infrações Cometidas por Menores Infratores: Estudo de caso no Município de Vitória no estado
+                    do Espírito Santo. In: X Escola Regional de Banco de Dados (ERBD 2014), 2014, São Francisco do Sul/ SC.
+                    Anais do X Escola Regional de Banco de Dados (ERBD 2014), 2014.</p>
 
             </div>
         </div>
