--- a/view/posts/post1.html
+++ b/view/posts/post1.html
@@ -22,7 +22,8 @@
     <!-- Custom Fonts -->
     <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+        rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +52,6 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading">
                         <h1>Exercicios para aprender de forma prática... BDD e TDD</h1>
-                        <!--<h2 class="subheading">Problems look mighty small from 150 miles up</h2>-->
                         <span class="meta">Posted by <a href="../about.html">M@lu</a> on March 22, 2017</span>
                     </div>
                 </div>
@@ -64,57 +64,68 @@
         <div class="container">
             <div class="row">
                 <div style="text-align: justify" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>A proposta para este post era fazer uma reflexão envolvendo os assuntos: Testes (BDD e TDD), Padrões de Projeto e Codificação.
-                        Qual a melhor forma de envolver os três? É sempre necessário que os três andem juntos? Essas coisas...</p>
-                    <p>Bem, como uma visão geral do desenvolvimento, eu definiria como complicado. Complicado por vários motivos, mas o principal... por causa da lógica.</p>
-                    <p>Para que um código fique bem escrito e bem estruturado o primeiro passo, na minha opinião, é que a lógica do negócio tenha sido bem compreendida.
-                        A mas porque? Sempre dá pra modificar depois. Sim, mas a maneira ideal de se desenvolver um programa é definindo os testes para os comportamentos,
-                        para que em seguida possam ser criadas as classes e os métodos baseados nos testes. Então vamos lá comigo, se a lógica tiver confusa, logo, os testes
-                        estarão confusos o que resultará em... código ruim.</p>
-                    <p>Por isso que classifiquei a experiência como complicada. Primeiro porque nem sempre é tão simples de compreender a lógica do negócio,
-                        e segundo porque além de ter essas etapas bem definidas era necessário unir ao desenvolvimento os padrões de projeto.</p>
-                    <p>Padrões de Projeto, quando utilizados de forma correta, colaboram para a obtenção de um design flexível, mais coeso e menos acoplado.
-                        O que proporciona melhor manutenabilidade, flexibilidade, reuso de código e aumento na qualidade.</p>
-                    <p>Os padrões utilizados ao longo dos exercicios foram: Observer, Strategy, Interpreter, Chain of Responsability e MVC.</p>
-                    <p>Meu contato com o estudo dos padrões de projeto foi bem breve durante a disciplina de Programação Orientada a Objetos 2 à 1 ano atrás,
-                    portanto tive uma certa dificuldade na implementação dos padrões. A compreensão sobre como cada padrão deve ser utilizado não é tão complexo,
-                        mas de compreender até aplicar ao seu projeto tem uma certa distância. </p>
-                    <p>O padrão que eu tive bem mais contato é o padrão MVC. Eu costumo programar mais para front-end, e nos frameworks que utilizo, esse padrão, ou uma variância dele,
-                        é normalmente utilizado. Então a estruturação do projeto dentro do padrão MVC não foi tão complexo para mim.</p>
-                    <p>Então... Respondendo as primeiras perguntas que fiz. A melhor maneira de combinar os três seria BDD, TDD, Codigo, Refatoração, Padrões de Projeto, Testes.
-                    Nem sempre será possivel, ou necessário, associar padrões de projetos ao seu programa, mas é sempre indicado que testes e codificação andem sempre juntos.</p>
-                    <p>Seguem abaixo as imagens contendo o BDD de cada um dos exercícios. Para acessar o código fonte só acessar o <a href="https://github.com/malubsi/exercicios1LES20171">link</a>.</p>
+                    <p>A proposta para este post era fazer uma reflexão envolvendo os assuntos: Testes (BDD e TDD), Padrões
+                        de Projeto e Codificação. Qual a melhor forma de envolver os três? É sempre necessário que os três
+                        andem juntos? Essas coisas...</p>
+                    <p>Bem, como uma visão geral do desenvolvimento, eu definiria como complicado. Complicado por vários motivos,
+                        mas o principal... por causa da lógica.</p>
+                    <p>Para que um código fique bem escrito e bem estruturado o primeiro passo, na minha opinião, é que a lógica
+                        do negócio tenha sido bem compreendida. A mas porque? Sempre dá pra modificar depois. Sim, mas a
+                        maneira ideal de se desenvolver um programa é definindo os testes para os comportamentos, para que
+                        em seguida possam ser criadas as classes e os métodos baseados nos testes. Então vamos lá comigo,
+                        se a lógica tiver confusa, logo, os testes estarão confusos o que resultará em... código ruim.</p>
+                    <p>Por isso que classifiquei a experiência como complicada. Primeiro porque nem sempre é tão simples de
+                        compreender a lógica do negócio, e segundo porque além de ter essas etapas bem definidas era necessário
+                        unir ao desenvolvimento os padrões de projeto.</p>
+                    <p>Padrões de Projeto, quando utilizados de forma correta, colaboram para a obtenção de um design flexível,
+                        mais coeso e menos acoplado. O que proporciona melhor manutenabilidade, flexibilidade, reuso de código
+                        e aumento na qualidade.</p>
+                    <p>Os padrões utilizados ao longo dos exercicios foram: Observer, Strategy, Interpreter, Chain of Responsability
+                        e MVC.</p>
+                    <p>Meu contato com o estudo dos padrões de projeto foi bem breve durante a disciplina de Programação Orientada
+                        a Objetos 2 à 1 ano atrás, portanto tive uma certa dificuldade na implementação dos padrões. A compreensão
+                        sobre como cada padrão deve ser utilizado não é tão complexo, mas de compreender até aplicar ao seu
+                        projeto tem uma certa distância. </p>
+                    <p>O padrão que eu tive bem mais contato é o padrão MVC. Eu costumo programar mais para front-end, e nos
+                        frameworks que utilizo, esse padrão, ou uma variância dele, é normalmente utilizado. Então a estruturação
+                        do projeto dentro do padrão MVC não foi tão complexo para mim.</p>
+                    <p>Então... Respondendo as primeiras perguntas que fiz. A melhor maneira de combinar os três seria BDD,
+                        TDD, Codigo, Refatoração, Padrões de Projeto, Testes. Nem sempre será possivel, ou necessário, associar
+                        padrões de projetos ao seu programa, mas é sempre indicado que testes e codificação andem sempre
+                        juntos.</p>
+                    <p>Seguem abaixo as imagens contendo o BDD de cada um dos exercícios. Para acessar o código fonte só acessar
+                        o <a href="https://github.com/malubsi/exercicios1LES20171">link</a>.</p>
 
 
                     <h2 class="section-heading">Sistema de Controle de Temperatura</h2>
 
-		    <a href="#">
+                    <a href="#">
                         <img class="img-responsive" src="../../img/posts/post1/Selection_001.png" alt="">
                     </a>
 
                     <span class="caption text-muted">BDD Controle de Temperatura</span>
 
-		    <h2 class="section-heading">Calculo do Imposto de Renda</h2>
+                    <h2 class="section-heading">Calculo do Imposto de Renda</h2>
 
-		    <a href="#">
+                    <a href="#">
                         <img class="img-responsive" src="../../img/posts/post1/Selection_003.png" alt="">
-                    </a>                    
+                    </a>
 
                     <span class="caption text-muted">BDD Imposto de Renda</span>
 
                     <h2 class="section-heading">Sistema de Navegação</h2>
 
-		    <a href="#">
+                    <a href="#">
                         <img class="img-responsive" src="../../img/posts/post1/Selection_004.png" alt="">
-                    </a>                    
+                    </a>
 
                     <span class="caption text-muted">BDD Sistema de Navegacao</span>
 
-		    <h2 class="section-heading">Calculadora Polonesa</h2>
+                    <h2 class="section-heading">Calculadora Polonesa</h2>
 
-		    <a href="#">
+                    <a href="#">
                         <img class="img-responsive" src="../../img/posts/post1/Selection_002.png" alt="">
-                    </a>                    
+                    </a>
 
                     <span class="caption text-muted">BDD Calculadora Polonesa</span>
 
