--- a/view/about.html
+++ b/view/about.html
@@ -100,14 +100,17 @@
                 <h3>EXPERIÊNCIA PRÁTICA</h3>
                 <ul>
                     <li>Sistema de Informação Geográfica (SIG): ArcGIS, QuantumGIS – Intermediário.</li>
-                    <li>Linguagem de programação Java – Básico.</li>
-                    <li>Linguagem SQL – Básico.</li>
-                    <li>Desenvolvimento WEB: CSS, HTML, JavaScript – Básico.</li>
-                    <li>Desenvolvimento mobile (Android): Adobe Flash Professional, Ionic e Angular JS.</li>
+                    <li>Autodesk: AutoCAD - Básico.</li>
+                    <li>Adobe: Flash Professional, Illustrator, Photoshop, Dreamweaver - Básico.</li>
+                    <li>Office: Word, Power Point – Avançado, Excel - Intermediário.</li>
                     <li>Modelagem de Processos BPMN: Bizagi – Básico.</li>
                     <li>Modelagem UML – Básico.</li>
-                    <li>Pacote Office: Word, Power Point – Avançado</li>
-                    <li>Pacote Office: Excel - Intermediário</li>
+                    <li>Linguagem SQL: MySql, PostgreSql – Básico.</li>
+                    <li>Linguagem de programação: Java, Python - Básico.</li>
+                    <li>Desenvolvimento WEB: CSS, HTML, JavaScript, TypeScript – Básico.</li>
+                    <li>Desenvolvimento mobile (Android): Adobe Flash Professional, Ionic e Angular JS.</li>
+                    <li>Git e repositórios Git: Git - Intermediário, Github, Bitbucket - Básico.</li>
+                    <li>Desenvolvimento Ágil: Scrum, Human Centered Design, Project Model Canvas, Value Proposition Canvas, Planning Poker, Six Hats.</li>
                 </ul>
 
                 <h3>QUALIFICAÇÕES E ATIVIDADES COMPLEMENTARES</h3>
@@ -117,12 +120,23 @@
                     <li>Capa e Editoração do Referencial Informativo do Geobases para a edição 2011.</li>
                 </ul>
 
-                <h3>TRABALHOS COMPLETOS PUBLICADOS EM ANAIS DE CONGRESSO</h3>
-                <p> SILVA, M. L. G. ; MANTOVANELLI, E. C. ; ANDRADE, J. O. ; KOMATI, K. S. . Uma Aplicação baseada em SIG para
-                    Análise de Infrações Cometidas por Menores Infratores: Estudo de caso no Município de Vitória no estado
-                    do Espírito Santo. In: X Escola Regional de Banco de Dados (ERBD 2014), 2014, São Francisco do Sul/ SC.
-                    Anais do X Escola Regional de Banco de Dados (ERBD 2014), 2014.</p>
+                <h3>TRABALHO VOLUNTÁRIO</h3>
+                <ul>
+                    <li>Intérprete em um evento do Watoto Tour (Crianças - Julho 2015)</li>
+                </ul>
+                <p> Watoto veio ao Brasil em um tour e eu os auxiliei na comunicação, quando era necessário, 
+                    durante o período do tour deles pela minha cidade. Mais informações sobre o projeto em: 
+                    <a href="https://www.watoto.com/">Watoto</a>
+                </p>
 
+                <h3>PROJETOS DESENVOLVIDOS</h3>
+                <ul>
+                    <li>Mapa do Bem</li>
+                </ul>
+                <p> Aplicativo desenvolvido em 8 meses por mim e Edvaldo Cordeiro Mantovanelli através do Laboratório de Extensão 
+                    em Desenvolvimento de Software (LEDS) em parceria com o Labtec e com o Ateliê de Ideias. Aplicação disponível no 
+                    <a href="https://play.google.com/store/apps/details?id=com.ionicframework.frontendmb571700">Google Play</a>.
+                </p>
             </div>
         </div>
     </div>
