--- a/view/about.html
+++ b/view/about.html
@@ -74,26 +74,26 @@
 
                 <h3>EXPERIÊNCIA PROFISSIONAL</h3>
                 <h4>1 ano – Polícia Militar do Espírito Santo (2006)</h4>
-                <p> Cargo: Estagiária <br> Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos,
+                <p style="text-align: justify"> Cargo: Estagiária <br> Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos,
                     Digitar Documentos, entre outras.</p>
                 <h4>3 meses – Secretaria Municipal de Saúde da Prefeitura Municipal de Vitória (2010)</h4>
-                <p> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
+                <p style="text-align: justify"> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
                     ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de
                     2010.</p>
                 <h4>7 meses – Sistema Integrado de Bases Geoespaciais do Estado do Espírito Santo (GEOBASES) (2010)</h4>
-                <p> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
+                <p style="text-align: justify"> Cargo: Estagiária Técnica <br> Principais atividades: Fazer manutenção de banco de dados, Usar o software
                     ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos
                     de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras.</p>
                 <h4>6 meses – Laboratório de Extensão em Desenvolvimento de Software (LEDS) (2015-2016)</h4>
-                <p> Cargo: Estagiária <br> Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition),
+                <p style="text-align: justify"> Cargo: Estagiária <br> Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition),
                     Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras.</p>
                 <h4>8 meses – Conexos (2016)</h4>
-                <p> Cargo: Estagiária <br> Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção
+                <p style="text-align: justify"> Cargo: Estagiária <br> Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção
                     de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
 
                 <h3>EXPERIÊNCIA INTERNACIONAL</h3>
                 <h4>18 meses – Intercâmbio pelo Ciência Sem Fronteiras (Jan 2014/Jun 2015)</h4>
-                <p>Atrávez do programa Ciência Sem Fronteiras, morei na cidade de Waterford na Irlanda por 18 meses. Neste período
+                <p style="text-align: justify">Atrávez do programa Ciência Sem Fronteiras, morei na cidade de Waterford na Irlanda por 18 meses. Neste período
                     cursei 8 meses de curso de inglês seguidos de 10 meses no curso de BSc. Multimedia Applications Development
                     no Waterford Institute of Technology.</p>
 
@@ -124,7 +124,7 @@
                 <ul>
                     <li>Intérprete em um evento do Watoto Tour (Crianças - Julho 2015)</li>
                 </ul>
-                <p> Watoto veio ao Brasil em um tour e eu os auxiliei na comunicação, quando era necessário, 
+                <p style="text-align: justify"> Watoto veio ao Brasil em um tour e eu os auxiliei na comunicação, quando era necessário, 
                     durante o período do tour deles pela minha cidade. Mais informações sobre o projeto em: 
                     <a href="https://www.watoto.com/">Watoto</a>
                 </p>
@@ -133,7 +133,7 @@
                 <ul>
                     <li>Mapa do Bem</li>
                 </ul>
-                <p> Aplicativo desenvolvido em 8 meses por mim e Edvaldo Cordeiro Mantovanelli através do Laboratório de Extensão 
+                <p style="text-align: justify"> Aplicativo desenvolvido em 8 meses por mim e Edvaldo Cordeiro Mantovanelli através do Laboratório de Extensão 
                     em Desenvolvimento de Software (LEDS) em parceria com o Labtec e com o Ateliê de Ideias. Aplicação disponível no 
                     <a href="https://play.google.com/store/apps/details?id=com.ionicframework.frontendmb571700">Google Play</a>.
                 </p>
