--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -64,44 +64,8 @@
             <div class="row">
                 <div style="text-align: justify" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>
-                        Este post vai abordar um pouco sobre quais as métricas podem ser utilizadas para medir 
-                        a qualidade de software. Eu, com a minha vasta experiência em projetos (só um), não tinha 
-                        utilizado metricas de qualidade de software antes. E como um requisito do trabalho da 
-                        disciplina de LES(Laboratório de Engenharia de Software), tinhamos que definir algumas métricas 
-                        baseadas nas opções que o SonarQube oferecia.
-                    </p>
-                    <p>
-                        O meu grupo optou pelas metricas e (metas):
-                        <ul>
-                            <li>
-                                Bugs (menor que 10)
-                            </li>
-                            <li>
-                                Vulnerabilidades (menor que 10)
-                            </li>
-                            <li>
-                                Code Smells (menor que 10)
-                            </li>
-                            <li>
-                                Duplicidade de código (menor que 2.5%)
-                            </li>
-                            <li>
-                                Cobertura por Testes (maior que 90%)
-                            </li>
-                        </ul>
-                    </p>
-                    <p>
-                        Como o nosso sistema é um aplicação mobile desenvolvido com o framework Ionic 2, usando na maior parte 
-                        funções nativas. Estamos encontrando uma certa dificuldade em desenvolver os testes para as classes. 
-                        Mas todas as configurações estão ativas desde o inicio do projeto, e o ultimo resultado coletado do SonarQube 
-                        ontem apresentava por resultado a imagem abaixo:
-                    </p>
-                    <img src="../../img/posts/post3/WhatsApp Image 2017-05-03 at 22.27.43.jpeg" alt="Imagem SonarQube" width="750" height="306">
-                    <p>
-                        Primeiro eu fiquei impressionada, depois eu pensei. Cara... Não pode ser. Acredito que para typeScript a 
-                        leitura do Sonar não esteja muito bem amarrado e por isso não esteja respondendo da maneira mais realista.
-                        Mas em um sistema com linguagens mais conhecidas/utilizadas como java ou python, acredito que o resultado 
-                        deva ser mais fiel. Ou basta aceitar que somos bons mesmo e continuar assim :D
+                        Durante este primeiro semestre do ano de 2017 estive cursando a matéria Laboratório de Engenharia de Software,
+                        nesta disciplina era necessário que fosse desenvolvido um trabalho em grupo que serviria como a avaliação da matéria.
                     </p>
                 </div>
             </div>
