--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -67,6 +67,25 @@
                         Durante este primeiro semestre do ano de 2017 estive cursando a matéria Laboratório de Engenharia de Software,
                         nesta disciplina era necessário que fosse desenvolvido um trabalho em grupo que serviria como a avaliação da matéria.
                     </p>
+                    <p>
+                        O meu grupo é composto por 4 pessoas: Adler, Rodigo, Yago e Eu. Tinhamos que escolher um cliente para vender o nosso sistema.
+                        E escolhemos uma empresa que vende lanches. O sistema proposto para o nosso cliente é uma aplicação mobile para auxiliá-lo
+                        no processo de fazer as compras para o estabelecimento.
+                    </p>
+                    <p>
+                        A maneira como eles fazem esse processo atualmente é o seguinte:
+                        <t>
+                            Verificar o que falta no estoque.
+                            Anotar no papel os itens e quantidades.
+                            Ir de mercado em mercado e escrever o valor para cada item.
+                            Retornar para o estabelecimento para fazer os orçamentos.
+                            Voltar e fazer as compras baseada no menor orçamento.
+                        </t>
+                    </p>
+                    <p>
+                        O que propomos com a nossa aplicação seria realizar esse cálculo 
+                        de forma automatizada após ele criar a lista na aplicação e incluir os preços por mercado.
+                    </p>
                 </div>
             </div>
         </div>
