--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -74,13 +74,13 @@
                     </p>
                     <p>
                         A maneira como eles fazem esse processo atualmente é o seguinte:
-                        <t>
+                        <quote>
                             Verificar o que falta no estoque.
                             Anotar no papel os itens e quantidades.
                             Ir de mercado em mercado e escrever o valor para cada item.
                             Retornar para o estabelecimento para fazer os orçamentos.
                             Voltar e fazer as compras baseada no menor orçamento.
-                        </t>
+                        </quote>
                     </p>
                     <p>
                         O que propomos com a nossa aplicação seria realizar esse cálculo 
