--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -74,13 +74,13 @@
                     </p>
                     <p>
                         A maneira como eles fazem esse processo atualmente é o seguinte:
-                        <quote>
-                            Verificar o que falta no estoque.
-                            Anotar no papel os itens e quantidades.
-                            Ir de mercado em mercado e escrever o valor para cada item.
-                            Retornar para o estabelecimento para fazer os orçamentos.
-                            Voltar e fazer as compras baseada no menor orçamento.
-                        </quote>
+                        <ul>
+                            <li>Verificar o que falta no estoque.</li>
+                            <li>Anotar no papel os itens e quantidades.</li>
+                            <li>Ir de mercado em mercado e escrever o valor para cada item.</li>
+                            <li>Retornar para o estabelecimento para fazer os orçamentos.</li>
+                            <li>Voltar e fazer as compras baseada no menor orçamento.</li>
+                        </ul>
                     </p>
                     <p>
                         O que propomos com a nossa aplicação seria realizar esse cálculo 
