--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -84,7 +84,11 @@
                     </p>
                     <p>
                         O que propomos com a nossa aplicação seria realizar esse cálculo 
-                        de forma automatizada após ele criar a lista na aplicação e incluir os preços por mercado.
+                        de forma automatizada, após ele criar a lista na aplicação e incluir os preços por mercado.
+                    </p>
+                    <p>
+                        Quando estávamos na etapa de Inception do projeto dividimos o desenvolvimento entre os membros do grupo.
+                        As minhas funções seriam relativas ao gerenciamento do projeto e ao design da aplicação.
                     </p>
                 </div>
             </div>
