--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -64,13 +64,13 @@
             <div class="row">
                 <div style="text-align: justify" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>
-                        Durante este primeiro semestre do ano de 2017 estive cursando a matéria Laboratório de Engenharia de Software,
-                        nesta disciplina era necessário que fosse desenvolvido um trabalho em grupo que serviria como a avaliação da matéria.
+                        Durante este primeiro semestre do ano de 2017 estive cursando a matéria Laboratório de Engenharia de Software, nesta disciplina
+                        era necessário que fosse desenvolvido um trabalho em grupo que serviria como a avaliação da matéria.
                     </p>
                     <p>
                         O meu grupo é composto por 4 pessoas: Adler, Rodigo, Yago e Eu. Tinhamos que escolher um cliente para vender o nosso sistema.
-                        E escolhemos uma empresa que vende lanches. O sistema proposto para o nosso cliente é uma aplicação mobile para auxiliá-lo
-                        no processo de fazer as compras para o estabelecimento.
+                        E escolhemos uma empresa que vende lanches. O sistema proposto para o nosso cliente é uma aplicação
+                        mobile para auxiliá-lo no processo de fazer as compras para o estabelecimento.
                     </p>
                     <p>
                         A maneira como eles fazem esse processo atualmente é o seguinte:
@@ -83,12 +83,33 @@
                         </ul>
                     </p>
                     <p>
-                        O que propomos com a nossa aplicação seria realizar esse cálculo 
-                        de forma automatizada, após ele criar a lista na aplicação e incluir os preços por mercado.
+                        O que propomos com a nossa aplicação seria realizar esse cálculo de forma automatizada, após ele criar a lista na aplicação
+                        e incluir os preços por mercado.
                     </p>
                     <p>
-                        Quando estávamos na etapa de Inception do projeto dividimos o desenvolvimento entre os membros do grupo.
-                        As minhas funções seriam relativas ao gerenciamento do projeto e ao design da aplicação.
+                        Quando estávamos na etapa de Inception do projeto dividimos o desenvolvimento entre os membros do grupo. As minhas funções
+                        seriam relativas ao gerenciamento do projeto e ao design da aplicação. Definido isso, comecei minha
+                        parte no desenvolvimento fazendo todas as instalações e configurações necessárias para iniciar o
+                        desenvolvimento da aplicação. Veja abaixo com mais detalhes o que foi feito por mim:
+                        <ul>
+                            <li>Criar repositório no GitHub</li>
+                            <li>Convidar os outros membros como colaboradores</li>
+                            <li>Fazer o PMC (Project Model Canvas)</li>
+                            <li>Criar e Configurar o projeto no Taiga</li>
+                            <li>Criar e configurar o projeto no Trello</li>
+                            <li>Criar um projeto no Slack</li>
+                            <li>Relacionar o Github ao Slack</li>
+                            <li>Relacionar o TravisCi ao Slack</li>
+                            <li>Relacionar o GitHub ao TravisCi e ao SonarQube (Adler assumiu a configuração)</li>
+                            <li>Definir o cronograma</li>
+                            <li>Definir Sprints (Inicio, Fim, Quantidade, Duração)</li>
+                            <li>Criar o arquivo de backlog</li>
+                            <li>Reunir a equipe para realizar o planning poker</li>
+                            <li>Concluir o arquivo de backlog</li>
+                            <li>Atualizar a documentação de entrega relativa a gestão de projetos</li>
+                            <li>Projetar o design</li>
+                            <li>Iniciar o desenvolvimento do design</li>
+                        </ul>
                     </p>
                 </div>
             </div>
