--- a/view/posts/post4.html
+++ b/view/posts/post4.html
@@ -100,16 +100,21 @@
                             <li>Criar um projeto no Slack</li>
                             <li>Relacionar o Github ao Slack</li>
                             <li>Relacionar o TravisCi ao Slack</li>
-                            <li>Relacionar o GitHub ao TravisCi e ao SonarQube (Adler assumiu a configuração)</li>
+                            <li>Relacionar o GitHub ao TravisCi e ao SonarQube <br>(Adler assumiu a configuração)</li>
                             <li>Definir o cronograma</li>
                             <li>Definir Sprints (Inicio, Fim, Quantidade, Duração)</li>
                             <li>Criar o arquivo de backlog</li>
                             <li>Reunir a equipe para realizar o planning poker</li>
                             <li>Concluir o arquivo de backlog</li>
                             <li>Atualizar a documentação de entrega relativa a gestão de projetos</li>
+                            <li>Reuniões com a equipe para saber sobre o andamento do projeto</li>
                             <li>Projetar o design</li>
                             <li>Iniciar o desenvolvimento do design</li>
                         </ul>
+                        A importância das minhas contribuições ao trabalho são basicamente relativas ao andamento do projeto.
+                        Quanto a documentação eu lia os textos e fazia ajustes na forma como estava escrito e tentava ficar por dentro de tudo.
+                        Quanto a parte de desenvolvimento a maior parte da minha contribuição vai ser na próxima entrega, já que serei responsável por
+                        repensar e desenvolver a interface para promover melhor usabilidade, através de botões e ações intuitivas.
                     </p>
                 </div>
             </div>
